--- a/install_files/snakevir_environment.yml
+++ b/install_files/snakevir_environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - cap3=10.2011
   - csvkit=1.0.5
   - cutadapt=3.4
-  - diamond=2.0.9
+  - diamond
   - entrez-direct=13.9
   - ete3=3.1.2
   - flash=1.2.11
