--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,6 @@ docs/_templates/
 .snakemake
 
 # for dev
-install_files/.install
-install_files/profile/
+snakevir/install_files/.install
+snakevir/install_files/profile/
 
