--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
 [tool.setuptools]
 include-package-data = true
 
+[tool.setuptools.package-data]
+"*" = ["*"]
+
 [project.scripts]
 snakevir = "snakevir.main:main"
 
