--- a/snakevir/snakefile
+++ b/snakevir/snakefile
@@ -14,6 +14,7 @@ def errormes(mes):
 configfile : "config.yaml"
 cconfigfile : "config.yaml"
 datadir = config["fastq"]
+output_directory = config["output"]
 scriptdir = config["Scripts"]
 host_db = config["host_db"]
 rRNA_bact=config["rRNA_bact"]
@@ -58,16 +59,16 @@ if NBREADS != 2*NBSAMPLES:
 
 rule final:
     input:
-        expand("logs/logs_contaminent/Stats_contaminent_{smp}.txt", smp=SAMPLES),
-        f"logs/logsAssembly/{RUN}_assembly_stats.txt",
-        expand(f"logs/insert_size/{{smp}}_insert_size_metrics_{RUN}.txt", smp=SAMPLES),
-        expand(f"logs/logs_coverage/{{smp}}_coverage_{RUN}.txt", smp=SAMPLES),
-        f"Coverage/count_contigs_raw_{RUN}.csv",
-        expand(f"logs/logs_coverage_raw/{{smp}}_coverage_{RUN}.txt", smp=SAMPLES),
-        f"intergreted_vir_check_{RUN}.csv",
-        f"results/hosts_lineage_{RUN}.csv",
-        f"logs/stats_run_{RUN}.csv",
-        f"{RUN}/results/range_10x_coverage.cov"
+        expand( f"{output_directory}/logs/01_read_processing/Stats_contaminent_{{smp}}.txt", smp=SAMPLES),
+        f"{output_directory}/logs/02_assembly_results/logsAssembly/{{RUN}}_assembly_stats.txt",
+        expand(f"{output_directory}/logs/03_mapping_on_assembly/{{smp}}_insert_size_metrics_{RUN}.txt", smp=SAMPLES),
+        expand(f"{output_directory}/05_depth/{{smp}}_coverage_{{RUN}}.txt", smp=SAMPLES),
+        f"{output_directory}/04_blast_output/03_coverage/count_contigs_raw_{RUN}.csv",
+        expand(f"{output_directory}/05_depth/{{smp}}_coverage_raw_{{RUN}}.txt", smp=SAMPLES),
+        f"{output_directory}/04_blast_output/05_taxonomy_nt/intergreted_vir_check_{RUN}.csv",
+        f"{output_directory}/06_final_data/hosts_lineage_{RUN}.csv",
+        f"{output_directory}/06_final_data/stats_run_{RUN}.csv",
+        f"{output_directory}/06_final_data/{RUN}_range_10x_coverage.cov"
 
 ############################### Read processing #################################################
 include: f"snakefiles/read_processing.snake"
@@ -92,7 +93,7 @@ rule Create_logs_report:
         by_seq = rules.Join_seq_acc_taxo_nr.output.taxo,
         count_t = rules.Build_array_coverage_nr.output.by_seq
     output:
-        "logs/stats_run_{RUN}.csv"
+        f"{output_directory}/06_final_data/stats_run_{{RUN}}.csv"
     params:
         files=datadir,
         ext=ext_R1+ext,
