--- a/snakevir/install_files/cluster.yaml
+++ b/snakevir/install_files/cluster.yaml
@@ -1,64 +1,65 @@
 __default__:
   job-name: "{rule}"
-  partition: long
+  partition: agap_long
   nodes: '1'
   cpus-per-task: '1'
   output: cluster_log/{rule}_%j.out
   error: cluster_log/{rule}_%j.err
   time: 10-00:00:00
   mem: 10G
+  account: agap
   
 Quality_trimming:
-  partition: long
+  partition: agap_long
   cpus-per-task: '4'
   
 Map_On_host:
-  partition: long
+  partition: agap_long
   cpus-per-task: '4'
   mem: 20G
   log: "/dev/null"
   
 Map_On_bacteria:
-  partition: long
+  partition: agap_long
   cpus-per-task: '4'
   mem: 20G
   
 Megahit_Assembly:
-  partition: long
+  partition: agap_long
   cpus-per-task: '8'
   mem: 40G
   
 Cap3_Assembly:
-  partition: long
+  partition: agap_long
   cpus-per-task: '10'
   
 Map_On_Assembly:
-  partition: long
+  partition: agap_long
   cpus-per-task: '4'
   mem: 20G
   
 Blast_contigs_on_nr:
-  partition: long
+  partition: agap_long
   cpus-per-task: '2'
   mem: 120G
   
 complete_taxo:
-  partition: long
+  partition: agap_long
   cpus-per-task: '4'
   
 Blast_contigs_on_nt:
-  partition: long
+  partition: agap_long
   cpus-per-task: '1'
   
 merge_depth:
-  partition: long
+  partition: agap_long
   mem: 75G
   
 range_depth:
-  partition: long
+  partition: agap_long
   mem: 40G
   
 stats_depth:
-  partition: long
+  partition: agap_long
   mem: 40G
 
