--- a/snakevir/snakefile
+++ b/snakevir/snakefile
@@ -102,3 +102,36 @@ rule Create_logs_report:
         """
         python {params.script} {params.files} {ext_R1} {ext_R2} {ext} {RUN} {input.by_seq}   {input.lineage}    {input.count_t}  {output}
         """
+
+rule Add_vir_to_blastn:
+    input:
+        virald_ids = rules.extract_viral_ids.output.taxo,
+        blast_5_hit = rules.get_nr_lineage_from_taxids.output.blst,
+        interg_virus = rules.intergreted_vir_check.output.tmp,
+    output:
+        blast_add_vir = f"{output_directory}/06_final_data/Blast_5_hit_{{RUN}}_add_vir.csv"
+    shell:
+        """
+        grep -Fw -f {input.virald_ids} {input.blast_5_hit} | awk -F"[\t, ]" 'FNR==NR&&NR!=1{{a[$1]="YES"}} FNR!=NR{{OFS=",";if(FNR!=1){$(NF+1)= (NR==1 ? "is_vir" : a[$1])}}1;print}' {input.interg_virus} -  |awk -F',' '!$NF {{OFS=","; $NF="NO" }}1' > {output.blast_add_vir}
+        """
+
+rule Clustering_OTU:
+    input:
+        blast_file = rules.Add_vir_to_blastn.output.blast_add_vir,
+        taxo_file = rules.get_nr_lineage_from_taxids.output.lin5c,
+        host_file = rules.join_host_tax.output.host_lineage,
+        count_file = rules.Build_array_coverage_nr.output.by_seq,
+        cov10_file = rules.results_depth.output.range_10x,
+        coverage_stat_file = rules.results_depth.output.stats_deph
+    output:
+        directory = directory(f"{output_directory}/06_final_data/OTU"),
+        report = f"{output_directory}/06_final_data/clustering_Report.html"
+    params:
+        script= path_rmd,
+        min_read_by_sample = 1,
+        min_read_by_contig = 1,
+        run_name = RUN
+    shell:
+        """
+        Rscript -e 'rmarkdown::render("{params.script}", output_file="{output.directory}", quiet=TRUE, params = list(output_directory = "{output.directory}", blast_file = "{input.blast_file}", taxo_file = "{input.taxo_file}", host_file = "{input.host_file}", count_file = "{input.count_file}", cov10_file = "{input.cov10_file}", coverage_stat_file = "{input.coverage_stat_file}", min_read_by_sample = "{params.min_read_by_sample}", min_read_by_contig = "{params.min_read_by_contig}"run_name = "{params.run_name}"))'
+        """
