--- a/snakevir/install_files/snakevir_environment.yml
+++ b/snakevir/install_files/snakevir_environment.yml
@@ -4,6 +4,9 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - r-base=4.0.5
+  - r-rmarkdown
+  - r-rmdformats
   - bioawk=1.0
   - biopython=1.78
   - blast=2.11.0
@@ -20,7 +23,6 @@ dependencies:
   - picard=2.25.4
   - pip=21.1.2
   - python=3.9.4
-  - r-base=4.0.5
   - samtools=1.12
   - seqtk=1.3
   - ripgrep=13.0.0
@@ -29,3 +31,4 @@ dependencies:
     - snakemake==7.25.0
     - tabulate==0.8.9
     - pyyaml==6.0.1
+    - ete3
