--- a/snakevir/snakefile
+++ b/snakevir/snakefile
@@ -68,7 +68,8 @@ rule final:
         f"{output_directory}/04_blast_output/05_taxonomy_nt/intergreted_vir_check_{RUN}.csv",
         f"{output_directory}/06_final_data/hosts_lineage_{RUN}.csv",
         f"{output_directory}/06_final_data/stats_run_{RUN}.csv",
-        f"{output_directory}/06_final_data/{RUN}_range_10x_coverage.cov"
+        f"{output_directory}/06_final_data/{RUN}_range_10x_coverage.cov",
+        f"{output_directory}/06_final_data/clustering_Report_{RUN}.html"
 
 ############################### Read processing #################################################
 include: f"snakefiles/read_processing.snake"
@@ -96,11 +97,12 @@ rule Create_logs_report:
         f"{output_directory}/06_final_data/stats_run_{{RUN}}.csv"
     params:
         files=datadir,
+        output_directory = output_directory,
         ext=ext_R1+ext,
         script=scriptdir+"create_results_doc_new.py"
     shell:
         """
-        python {params.script} {params.files} {ext_R1} {ext_R2} {ext} {RUN} {input.by_seq}   {input.lineage}    {input.count_t}  {output}
+        python {params.script} {params.files} {ext_R1} {ext_R2} {ext} {RUN} {input.by_seq}   {input.lineage}    {input.count_t}  {output} {params.output_directory}
         """
 
 rule Add_vir_to_blastn:
@@ -112,7 +114,8 @@ rule Add_vir_to_blastn:
         blast_add_vir = f"{output_directory}/06_final_data/Blast_5_hit_{{RUN}}_add_vir.csv"
     shell:
         """
-        grep -Fw -f {input.virald_ids} {input.blast_5_hit} | awk -F"[\t, ]" 'FNR==NR&&NR!=1{{a[$1]="YES"}} FNR!=NR{{OFS=",";if(FNR!=1){$(NF+1)= (NR==1 ? "is_vir" : a[$1])}}1;print}' {input.interg_virus} -  |awk -F',' '!$NF {{OFS=","; $NF="NO" }}1' > {output.blast_add_vir}
+        grep -Fw -f {input.virald_ids} {input.blast_5_hit}  | awk -F"[\t, ]" 'FNR==NR&&NR!=1{{a[$1]="YES"}} FNR!=NR{{OFS=",";if(FNR!=1){{$(NF+1)= (NR==1 ? "is_vir" : a[$1])}}1;print}}' {input.interg_virus} -  |awk -F',' '!$NF {{OFS=","; $NF="NO" }}1' > {output.blast_add_vir}
+        sed -i "s/tax_id/tax_id,not_vir/" {output.blast_add_vir}
         """
 
 rule Clustering_OTU:
@@ -124,14 +127,14 @@ rule Clustering_OTU:
         cov10_file = rules.results_depth.output.range_10x,
         coverage_stat_file = rules.results_depth.output.stats_deph
     output:
-        directory = directory(f"{output_directory}/06_final_data/OTU"),
-        report = f"{output_directory}/06_final_data/clustering_Report.html"
+        directory = directory(f"{output_directory}/06_final_data/{{RUN}}_OTU"),
+        report = f"{output_directory}/06_final_data/clustering_Report_{{RUN}}.html"
     params:
-        script= path_rmd,
+        script= f'{scriptdir}/clustering_Report.Rmd',
         min_read_by_sample = 1,
         min_read_by_contig = 1,
         run_name = RUN
     shell:
         """
-        Rscript -e 'rmarkdown::render("{params.script}", output_file="{output.directory}", quiet=TRUE, params = list(output_directory = "{output.directory}", blast_file = "{input.blast_file}", taxo_file = "{input.taxo_file}", host_file = "{input.host_file}", count_file = "{input.count_file}", cov10_file = "{input.cov10_file}", coverage_stat_file = "{input.coverage_stat_file}", min_read_by_sample = "{params.min_read_by_sample}", min_read_by_contig = "{params.min_read_by_contig}"run_name = "{params.run_name}"))'
+        Rscript -e 'rmarkdown::render("{params.script}", output_file="{output.directory}", quiet=TRUE, params = list(output_directory = "{output.directory}", blast_file = "{input.blast_file}", taxo_file = "{input.taxo_file}", host_file = "{input.host_file}", count_file = "{input.count_file}", cov10_file = "{input.cov10_file}", coverage_stat_file = "{input.coverage_stat_file}", min_read_by_sample = {params.min_read_by_sample}, min_read_by_contig = {params.min_read_by_contig} ,run_name = "{params.run_name}"))'
         """
