--- a/snakevir/snakefile
+++ b/snakevir/snakefile
@@ -64,7 +64,7 @@ rule final:
         expand(f"{output_directory}/logs/03_mapping_on_assembly/{{smp}}_insert_size_metrics_{RUN}.txt", smp=SAMPLES),
         expand(f"{output_directory}/logs/03_mapping_on_assembly/03_CountsMapping/{{smp}}_coverage_{RUN}.txt", smp=SAMPLES),
         f"{output_directory}/04_blast_output/03_coverage/count_contigs_raw_{RUN}.csv",
-        expand(f"{output_directory}/05_depth/{{smp}}_coverage_raw_{RUN}.txt", smp=SAMPLES),
+        expand(f"{output_directory}/05_depth/00_Coverage_raw/{{smp}}_coverage_raw_{RUN}.txt", smp=SAMPLES),
         f"{output_directory}/04_blast_output/05_taxonomy_nt/intergreted_vir_check_{RUN}.csv",
         f"{output_directory}/06_final_data/hosts_lineage_{RUN}.csv",
         f"{output_directory}/06_final_data/stats_run_{RUN}.csv",
