--- a/snakevir/install_files/config.yaml
+++ b/snakevir/install_files/config.yaml
@@ -8,6 +8,8 @@ fastq: "/PATH/TO/FASTQ/DIRECTORY/"
 output: "/PATH/TO/FASTQ/DIRECTORY/"
 # path to host genome fasta file
 host_genome: "/PATH/TO/FASTA/GENOME/"
+# path to metadata TSV
+metadata: "PATH/TO/METADATA/TSV"
 # Indicate how the reads are named (ex:_R1 , _R2 or _001_R1 , _001_R2)
 ext_R1: "_1"
 ext_R2: "_2"
