--- a/snakevir/snakefile
+++ b/snakevir/snakefile
@@ -94,7 +94,8 @@ rule Create_logs_report:
         by_seq = rules.Join_seq_acc_taxo_nr.output.taxo,
         count_t = rules.Build_array_coverage_nr.output.by_seq
     output:
-        f"{output_directory}/06_final_data/stats_run_{{RUN}}.csv"
+        stat = f"{output_directory}/06_final_data/stats_run_{{RUN}}.csv",
+        diamond_merge_df = f"{output_directory}/06_final_data/df_{{RUN}}.csv",
     params:
         files=datadir,
         output_directory = output_directory,
@@ -103,7 +104,7 @@ rule Create_logs_report:
     envmodules: config['module_file']
     shell:
         """
-        python {params.script} {params.files} {ext_R1} {ext_R2} {ext} {RUN} {input.by_seq}   {input.lineage}    {input.count_t}  {output} {params.output_directory}
+        python {params.script} {params.files} {ext_R1} {ext_R2} {ext} {RUN} {input.by_seq}   {input.lineage}    {input.count_t}  {output.stat} {params.output_directory} {output.diamond_merge_df}
         """
 
 rule Add_vir_to_blastn:
@@ -140,4 +141,28 @@ rule Clustering_OTU:
     shell:
         """
         Rscript -e 'rmarkdown::render("{params.script}", output_file="{output.directory}", quiet=TRUE, params = list(output_directory = "{output.directory}", blast_file = "{input.blast_file}", taxo_file = "{input.taxo_file}", host_file = "{input.host_file}", count_file = "{input.count_file}", cov10_file = "{input.cov10_file}", coverage_stat_file = "{input.coverage_stat_file}", min_read_by_sample = {params.min_read_by_sample}, min_read_by_contig = {params.min_read_by_contig} ,run_name = "{params.run_name}"))'
+        """
+
+rule make_source:
+    """
+    Create source file for sumission with Gsub tools !
+    """
+    input:
+        all_fasta = rules.Merge_Mega_cap_contigs.output.final_assembly,
+        viral_fasta = rules.extract_viral_contigs.output.viral_cont,
+        blast_file = rules.Blast_contigs_on_nt.output.blast,
+        diamond_merge_file = rules.Create_logs_report.output.diamond_merge_df,
+        metadata = config['metadata']
+    output:
+        final_output='';
+        source_directory=""
+    params:
+        script = f'{scriptdir}/snakeVir2Gsub.py',
+    envmodules: config['module_file']
+    shell:
+        """
+        cp {input.all_fasta} {output.final_output}
+        cp {input.viral_fasta} {output.final_output}
+        {params.script} --fasta {input.viral_fasta} -b {input.blast_file} -d {input.diamond_merge_file} -m input.metadata} -o {output.source_directory}
+        mv {input.diamond_merge_file} {output.final_output}
         """
