--- a/snakevir/install_files/snakevir_environment.yml
+++ b/snakevir/install_files/snakevir_environment.yml
@@ -2,6 +2,7 @@ name: snakevir
 channels:
   - conda-forge
   - bioconda
+  - anaconda
   - defaults
 dependencies:
   - perl-common-sense
@@ -12,6 +13,10 @@ dependencies:
   - r-base=4.1.1
   - r-rmarkdown
   - r-rmdformats
+  - r-ggplot2
+  - r-plotly
+  - r-dplyr=1.0.10
+  - r::r-data.DT
   - bioawk=1.0
   - biopython=1.78
   - blast=2.12.0
@@ -37,3 +42,7 @@ dependencies:
     - tabulate==0.8.9
     - pyyaml==6.0.1
     - ete3
+    - orffinder
+    - pyhmmer==0.6.2
+    - colored
+
