--- a/snakevir/install_files/snakevir_environment.yml
+++ b/snakevir/install_files/snakevir_environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - r-plotly
   - r-dplyr=1.0.10
   - r::r-data.DT
+  - conda-forge::r-reticulate==1.22
   - bioawk=1.0
   - biopython=1.78
   - blast=2.12.0
@@ -46,4 +47,3 @@ dependencies:
     - pyhmmer==0.6.2
     - colored
     - psutil
-
